Fix spacing. Add back-to-top feat. Add font-type

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,21 +74,26 @@ html {
 footer {
     font-size: clamp(1.6rem, 10vw, 1.8rem);
 }
-h1, h2, h3,
-p,
-ul {
+h1, h2, h3, h4,
+ul,
+.topOfPage {
     font-family: 'Roboto Serif', serif;
+}
+p {
+    font-family: 'Source Serif 4', 'Roboto Serif', serif;
+    font-weight: 500;
 }
 h1 {
     font-size: clamp(3.2rem, 10vw, 4.8rem);
 }
 h2, h3 {
-    font-size: clamp(2.4rem, 5vw, 3.6rem);
+    font-size: clamp(2.4rem, 10vw, 3.6rem);
 }
 h4,
 legend,
-p {
-    font-size: clamp(1.8rem, 5vw, 2.8rem);
+p,
+.topOfPage {
+    font-size: clamp(1.8rem, 10vw, 2.8rem);
 }
 h5,
 input,
@@ -133,6 +138,9 @@ main {
 .textAlignLeft {
     text-align: left;
 }
+.textAlignJustify {
+    text-align: justify;
+}
 /*INTERACTIVE STYLES*/
 .button:hover {
     background: var(--gold);
@@ -140,13 +148,20 @@ main {
     color: var(--white);
     transition: 0.3s ease-in-out;
 }
-.navSocial:hover {
+.navSocial:hover,
+.topOfPage:hover {
     color: var(--gold);
 }
 /*===========================================
     LAYOUT
 ===========================================*/
 /*BY TYPE*/
+body {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
 footer {
     border-top: 0.1rem solid var(--black);
     padding: 2rem 0;
@@ -184,12 +199,22 @@ h5 {
 p {
     line-height: 1.3;
 }
+/*BY CLASS*/
+.topOfPage {
+    display: block;
+    padding-bottom: 5rem;
+    text-align: center;
+}
 /*========================
     LAYOUT - MAIN PAGE
 ========================*/
 .hamburger,
 .navSocialMediaHeader {
     display: none;
+}
+.introduction {
+    border: 0.3rem solid var(--gold);
+    border-radius: 3rem;
 }
 .introduction p {
     padding-bottom: 0.5rem;
@@ -231,6 +256,7 @@ p {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 5rem;
 }
 .services div {
     padding: 2% 3rem;
@@ -238,7 +264,7 @@ p {
 }
 .services h3 {
     border-bottom: 0.1rem solid var(--black);
-    padding: 2% 0 1% 0;
+    padding: 5rem 0 2rem 0;
 }
 .services img {
     margin: auto 0;
@@ -258,11 +284,14 @@ p {
     flex-direction: row;
     justify-content: center;
     align-content: space-around;
-    gap: 5rem;
-    padding: 1rem 1% 0 1%;
+    gap: 8rem;
+    padding: 5rem 1% 0 1%;
 }
 .skills > section {
     width: 40%;
+}
+.skills img {
+    padding-bottom: 1.5rem;
 }
 .smallBtn {
     padding: 1rem 3rem;
@@ -356,6 +385,10 @@ legend {
     form {
         width: 100%;
     }
+    form,
+    .services {
+        padding-bottom: 5rem;
+    }
     h4 {
         padding: 1rem 10% 3rem 10%;
     }
@@ -374,6 +407,7 @@ legend {
         width: 100%;
     }
     .introduction {
+        box-shadow: 0 0 2rem 0.1rem var(--gold);
         padding: 10% 0;
     }
     .profilePicture {
@@ -392,16 +426,26 @@ legend {
         width: 100%;
     }
     .services div {
-        padding-top: 2rem;
+        padding: 2rem 0;
+    }
+    .services img {
+        padding-top: 3rem;
     }
     .services p {
         padding-bottom: 2rem;
+    }
+    .servicesSubHeading {
+        padding: 0;
+        text-align: justify;
+    }
+    .skills {
+        padding: 5rem 1%;
     }
     /*HAMBURGER MENU*/
     .hamburger {
         display: block;
         cursor: pointer;
-        padding: 2rem;
+        padding: 2rem 2rem 4rem 2rem;
         width: 10%;
     }
     .bar {
@@ -438,6 +482,7 @@ legend {
         background: var(--white);
         box-shadow: 1rem 0 0.5rem -0.2rem var(--light-gray);
         height: 100vh;
+        overflow-y: scroll;
         transition: 0.3s;
         width: 70%;
     }
@@ -469,7 +514,8 @@ legend {
         width: fit-content;
     }
     .navSocial {
-        padding-top: 3rem;
+        margin-bottom: 5rem;
+        padding: 3rem 0;
     }
     /*LAYOUT - PORTFOLIO*/
     .myProjects {
@@ -524,6 +570,7 @@ legend {
     }
     .skills {
         flex-wrap: wrap;
+        padding: 5rem 1%;
     }
     .skills > section {
         width: 40%;
@@ -552,8 +599,6 @@ legend {
     }
     /*BY CLASS*/
     .introduction {
-        border: 0.3rem solid var(--gold);
-        border-radius: 3rem;
         box-shadow: 0 0 5rem 0.1rem var(--gold);
         margin: 0 auto;
         width: 60%;
@@ -593,8 +638,6 @@ legend {
     }
     /*BY CLASS*/
     .introduction {
-        border: 0.3rem solid var(--gold);
-        border-radius: 3rem;
         box-shadow: 0 0 5rem 0.1rem var(--gold);
         margin: 0 auto;
         width: 60%;
